2022-01-28 - Fixed Header and Main, but still not responsive - Update 004

--- a/css/home.css
+++ b/css/home.css
@@ -68,27 +68,27 @@ main {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border: darkred 2px dashed;
-    top: 50rem;
+    /* border: darkred 2px dashed; */
+    top: 10rem;
 }
 
 .letters {
     display: flex;
     flex-direction: column;
-    border: 2px solid yellow;
+    /* border: 2px solid yellow; */
     width: 35vw;
     height: 15vh;
-    margin-left: 12rem;
+    margin-left: 15rem;
 }
 
 h1 {
-    font-size: 5vh;
+    font-size: 4vh;
     padding-bottom: 1vh;
 }
 
 p {
     font-size: 2.5vh;
-    padding-bottom: 1vh;
+    padding-bottom: 5vh;
 }
 .phones {
     display: flex;
@@ -101,23 +101,26 @@ p {
 .sphone2 {
     position: relative;
     top: 1rem;
-    left: -30rem;
+    left: -29rem;
 }
 
 .button1, .button2 {
-    border: none;
+    /* border: none; */
     border-radius: 0.2rem;
     width: 15rem;
-    height: 1.5rem;
-    font-size: 3vh;
+    height: 5rem;
+    font-size: 4vh;
+    font-weight: bolder;
+    padding: 1rem 3rem;
 }
 
-.button1 {
+.button1, .button1:hover {
     color: #ffffff;
     background-color: #29be56;
 }
 
-.button2 {
+.button2, .button2:hover {
     color: #ffffff;
     background-color: #3498db;
+    margin-left: 1vw;
 }
