--- a/css/menu.css
+++ b/css/menu.css
@@ -5,7 +5,7 @@ header {
     height: 15vh;
     width: 100vw;
     /* margin-top: 5rem; */
-    border: 2px red dashed;
+    /* border: 2px red dashed; */
     /* z-index: 1; */
   }
   nav div{
@@ -15,7 +15,7 @@ header {
   header nav ul {
     display: flex;
     justify-content: center;
-    margin-left: 7rem;
+    margin-left: 19rem;
   }
   li {
     display: flex;
